--- a/samples/atomic/search-commerce-angular/package.json
+++ b/samples/atomic/search-commerce-angular/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "19.2.2",
     "@angular/platform-browser-dynamic": "19.2.2",
     "@angular/router": "19.2.2",
-    "@coveo/atomic-angular": "3.7.15",
+    "@coveo/atomic-angular": "workspace:*",
     "rxjs": "7.8.2",
     "zone.js": "0.15.1",
     "tslib": "2.8.1"
