--- a/packages/atomic/package.json
+++ b/packages/atomic/package.json
@@ -58,11 +58,13 @@
     "build:list-assets": "node ./scripts/list-assets.mjs",
     "dev": "node ./scripts/dev.mjs",
     "web:dev": "npx vite serve dev",
-    "web:cdn": "node ./scripts/start-cdn.mjs",
+    "web:cdn": "node ./scripts/start-cdn.mjÈts",
     "prod": "npx serve www -l 3333 --no-request-logging",
     "test": "pnpm run test:lit",
     "test:stencil": "stencil test --spec -- src/utils/initialization-utils.spec.ts",
-    "test:lit": "vitest run --project=atomic-default",
+    "test:lit": "pnpm --filter @coveo/ci if-ci test:lit",
+    "test:lit:noci": "vitest run --project=atomic-default",
+    "test:lit:ci": "pnpm test:lit:noci --shard=1/2 && pnpm test:lit:noci --shard=2/2",
     "test:watch": "vitest --project=atomic-default",
     "test:storybook": "vitest run --project=storybook",
     "e2e": "cypress run --browser chrome",
