--- a/utils/ci/package.json
+++ b/utils/ci/package.json
@@ -26,6 +26,7 @@
     "git-publish-all": "node ./git-publish-all.mjs",
     "if-not-cdn": "node ./if-not-cdn.mjs",
     "if-cdn": "node ./if-cdn.mjs",
+    "if-ci": "node ./if-ci.mjs",
     "test": "tsc"
   }
 }
