--- a/packages/atomic/package.json
+++ b/packages/atomic/package.json
@@ -131,6 +131,7 @@
     "cypress-axe": "1.6.0",
     "cypress-repeat": "catalog:",
     "cypress-split": "1.5.0",
+    "debug": "4.4.3",
     "handlebars": "4.7.8",
     "html-loader-jest": "0.2.1",
     "jest": "catalog:",
