Add storybook-atomic to CI workflow dependencies
Otherwise, we do not "fail" the CI for a11y, which is sad.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -712,6 +712,7 @@ jobs:
       - "build"
       - "lint-check"
       - "unit-test"
+      - "storybook-atomic"
       - "playwright-atomic"
       - "playwright-atomic-theming"
       - "playwright-atomic-hosted-page-test"
@@ -752,6 +753,7 @@ jobs:
       - "build"
       - "lint-check"
       - "unit-test"
+      - "storybook-atomic"
       - "playwright-atomic"
       - "playwright-atomic-theming"
       - "playwright-atomic-hosted-page-test"
