chore: add vitest.rootConfig to VS Code settings for Atomic
this fix the extension getting confused about `@/`

--- a/packages/atomic/.vscode/settings.json
+++ b/packages/atomic/.vscode/settings.json
@@ -4,5 +4,6 @@
   },
   "chat.instructionsFilesLocations": {
     "../../.github/instructions": true
-  }
+  },
+  "vitest.rootConfig": "packages/atomic/vitest.config.js"
 }
