--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -60,7 +60,7 @@ catalog:
   rollup-plugin-node-polyfills: 0.2.1
   typedoc: 0.28.13
   typescript: 5.8.3
-  vite: 7.2.2.
+  vite: 7.2.2
   vitest: 4.0.10
   '@vitest/coverage-v8': 4.0.10
   '@vitest/browser-playwright': 4.0.10
