--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "husky": "9.1.7",
     "knip": "5.62.0",
     "lint-staged": "16.1.2",
+    "@playwright/mcp": "catalog:",
     "playwright": "catalog:",
     "publint": "0.3.12",
     "semver": "7.7.2",
