--- a/knip.jsonc
+++ b/knip.jsonc
@@ -13,7 +13,8 @@
   "workspaces": {
     ".": {
       "entry": ["hooks/*.js", "scripts/**/*.{js,mjs}"],
-      "ignoreBinaries": ["ts-node", "dev"]
+      "ignoreBinaries": ["ts-node", "dev"],
+      "ignoreDependencies": ["@playwright/mcp"]
     },
     "packages/headless": {
       "entry": ["src/*index.ts", "ponyfills/*.js"],
