--- a/packages/atomic/tsconfig.lit.json
+++ b/packages/atomic/tsconfig.lit.json
@@ -18,6 +18,7 @@
     "src/components/index.ts",
     "src/components/lazy-index.ts",
     "src/components.d.ts",
-    "src/lit-components.d.ts"
+    "src/lit-components.d.ts",
+    "src/icons.d.ts"
   ]
 }
