--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -415,7 +415,7 @@ jobs:
         id: check-changes
         run: |
           # Check if there are any modified or new snapshot files
-          SNAPSHOT_CHANGES=$(git status --porcelain | grep -E 'e2e/__snapshots__/.*\.png$' || echo "")
+          SNAPSHOT_CHANGES="$(git status --porcelain | grep -E 'e2e/__snapshots__/.*\.png$' || echo '')"
           if [[ -n "$SNAPSHOT_CHANGES" ]]; then
             echo "has_changes=true" >> $GITHUB_OUTPUT
             echo "Detected snapshot changes:"
