--- a/knip.jsonc
+++ b/knip.jsonc
@@ -30,7 +30,11 @@
       "ignoreDependencies": ["local-web-server"]
     },
     "packages/atomic-angular": {
-      "ignoreDependencies": ["rxjs"]
+      "ignoreDependencies": [
+        "rxjs",
+        // Can be removed once we bump our package to use more recent Angular versions that support Vite 7+.
+        "vite"
+      ]
     },
     "packages/atomic-angular/projects/atomic-angular": {
       "entry": ["src/public-api.ts"],
