--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -320,6 +320,28 @@ jobs:
           echo "Shard Index: ${{ steps.determine-tests.outputs.shardIndex }}"
           echo "Shard Total: ${{ steps.determine-tests.outputs.shardTotal }}"
         shell: bash
+  chromatic:
+    name: "Run Chromatic visual tests on Atomic"
+    needs: affected
+    if: contains(needs.affected.outputs.projects, '@coveo/atomic') && github.event_name != 'merge_group' && contains(github.event.pull_request.labels.*.name, 'chromatic')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@ec9f2d5744a09debf3a187a3f4f675c53b671911 # v2.13.0
+        with:
+          egress-policy: audit
+
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        with:
+          fetch-depth: 0
+      - uses: ./.github/actions/setup
+      - run: pnpm exec turbo chromatic --filter=@coveo/atomic
+        env:
+          CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          # https://www.chromatic.com/docs/faq/environment-variables/#how-to-set-chromatic-environment-variables-in-popular-ci-providers
+          CHROMATIC_SHA: ${{ github.event.pull_request.head.sha }}
+          CHROMATIC_BRANCH: ${{ github.head_ref }}
+          CHROMATIC_SLUG: ${{ env.GITHUB_REPOSITORY }}
   playwright-atomic:
     name: "Run Playwright tests for Atomic"
     needs: prepare-playwright-atomic
@@ -720,6 +742,7 @@ jobs:
       - "lint-check"
       - "knip"
       - "unit-test"
+      - "chromatic"
       - "storybook-atomic"
       - "playwright-atomic"
       - "playwright-atomic-theming"
