--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@biomejs/biome": "2.1.4",
     "@coveo/ci": "workspace:*",
     "@cspell/dict-fr-fr": "2.3.2",
+    "@playwright/mcp": "catalog:",
     "@tsconfig/node20": "20.1.6",
     "@types/jest": "catalog:",
     "@types/node": "catalog:",
+    "chromatic": "13.3.4",
     "concurrently": "9.2.0",
     "cspell": "9.2.0",
     "esbuild": "catalog:",
@@ -44,7 +46,6 @@
     "husky": "9.1.7",
     "knip": "5.62.0",
     "lint-staged": "16.1.2",
-    "@playwright/mcp": "catalog:",
     "playwright": "catalog:",
     "publint": "0.3.12",
     "semver": "7.7.2",
