--- a/packages/atomic/package.json
+++ b/packages/atomic/package.json
@@ -130,6 +130,7 @@
     "@vitest/coverage-v8": "catalog:",
     "@wc-toolkit/storybook-helpers": "10.0.0",
     "axe-core": "4.10.3",
+    "chromatic": "13.3.4",
     "cypress": "catalog:",
     "cypress-axe": "1.6.0",
     "cypress-repeat": "catalog:",
