--- a/packages/atomic/turbo.json
+++ b/packages/atomic/turbo.json
@@ -13,13 +13,8 @@
       "dependsOn": ["build:cem", "build:list-assets", "build:copy-assets"],
       "outputs": ["./dist-storybook/**"]
     },
-    "chromatic:build": {
-      "dependsOn": ["build:cem", "build:list-assets", "build:copy-assets"],
-      "outputs": ["./dist-chromatic/**"],
-      "env": ["IS_CHROMATIC"]
-    },
     "chromatic": {
-      "dependsOn": ["chromatic:build"],
+      "dependsOn": ["build:storybook"],
       "outputs": [],
       "env": [
         "CHROMATIC_PROJECT_TOKEN",
