--- a/package.json
+++ b/package.json
@@ -66,8 +66,7 @@
       "@wc-toolkit/storybook-helpers@10.0.0": "patches/@wc-toolkit+storybook-helpers+10.0.0.patch",
       "fix-esm-import-path@1.10.1": "patches/fix-esm-import-path+1.10.1.patch",
       "jest-environment-jsdom@29.7.0": "patches/jest-environment-jsdom+29.7.0.patch",
-      "@stencil/react-output-target@0.5.3": "patches/@stencil__react-output-target@0.5.3.patch",
-      "dayjs": "patches/dayjs.patch"
+      "@stencil/react-output-target@0.5.3": "patches/@stencil__react-output-target@0.5.3.patch"
     },
     "overrides": {
       "braces": "3.0.3",
