add validation script for light DOM host selectors

--- a/packages/atomic/package.json
+++ b/packages/atomic/package.json
@@ -80,7 +80,8 @@
     "release:phase1": "pnpm --filter @coveo/ci bump",
     "promote:npm:latest": "pnpm --filter @coveo/ci promote-npm-prod",
     "validate:definitions": "tsc --noEmit --esModuleInterop --skipLibCheck ./dist/types/components.d.ts",
-    "chromatic": "chromatic -d=dist-storybook"
+    "chromatic": "chromatic -d=dist-storybook",
+    "validate:light-dom-styles": "node ./scripts/check-light-dom-host-selectors.mjs"
   },
   "dependencies": {
     "@coveo/bueno": "workspace:*",
