--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,6 +7,7 @@
 
 packages/**/*.mdx @coveo/dx
 packages/**/*.md @coveo/dx
+packages/**/*.stories.tsx @coveo/dx
 packages/**/typedoc.json @coveo/dx
 packages/**/*.typedoc.json @coveo/dx
 
