--- a/packages/atomic/turbo.json
+++ b/packages/atomic/turbo.json
@@ -75,6 +75,11 @@
       "dependsOn": ["build"],
       "cache": false,
       "persistent": true
+    },
+    "web:cdn": {
+      "dependsOn": ["build:cdn"],
+      "cache": false,
+      "persistent": true
     }
   }
 }
