fix(atomic): fix build to include missing assets in CDN  (#6772)
Co-authored-by: Louis Bompart <lbompart@coveo.com>

--- a/packages/atomic/turbo.json
+++ b/packages/atomic/turbo.json
@@ -10,7 +10,7 @@
       "outputs": []
     },
     "build:storybook": {
-      "dependsOn": ["build:cem", "build:list-assets", "build:copy-assets"],
+      "dependsOn": ["build:cem"],
       "outputs": ["./dist-storybook/**"]
     },
     "chromatic": {
@@ -24,7 +24,7 @@
       ]
     },
     "build:cem": {
-      "dependsOn": ["build:stencil-lit"],
+      "dependsOn": ["build:cdn"],
       "outputs": ["./custom-elements.json"]
     },
     "build:stencil-lit": {
@@ -34,7 +34,6 @@
         "!dist/atomic/assets/**",
         "!dist/atomic/themes/**",
         "!dist/atomic/lang/**",
-        "cdn/**",
         "docs/**",
         "!docs/assets.json",
         "src/components.d.ts",
@@ -43,17 +42,23 @@
       ]
     },
     "build:copy-assets": {
-      "dependsOn": ["build:stencil-lit"],
+      "dependsOn": ["build:stencil-lit", "build:locales"],
       "outputs": ["dist/atomic/themes/**", "dist/atomic/lang/**"]
     },
+    "build:list-assets": {
+      "dependsOn": ["build:copy-assets"],
+      "outputs": ["dist/atomic/assets/**", "docs/assets.json"]
+    },
+    "build:cdn": {
+      "dependsOn": ["build:list-assets"],
+      "outputs": ["cdn/**"]
+    },
+
     "build:locales": {
       "dependsOn": ["^build"],
       "outputs": ["src/generated/**", "src/assets/lang/**"]
     },
-    "build:list-assets": {
-      "dependsOn": ["build:stencil-lit", "build:copy-assets"],
-      "outputs": ["dist/atomic/assets/**", "docs/assets.json"]
-    },
+
     "test:stencil": {
       "dependsOn": ["build:locales"],
       "outputs": ["coverage/**"]
@@ -68,6 +73,11 @@
     },
     "web:dev": {
       "dependsOn": ["build"],
+      "cache": false,
+      "persistent": true
+    },
+    "web:cdn": {
+      "dependsOn": ["build:cdn"],
       "cache": false,
       "persistent": true
     }
