--- a/packages/atomic/package.json
+++ b/packages/atomic/package.json
@@ -105,7 +105,7 @@
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "0.11.0",
-    "@mswjs/source": "0.5.0",
+    "@msw/source": "0.6.0",
     "@playwright/test": "catalog:",
     "@rollup/plugin-commonjs": "28.0.9",
     "@rollup/plugin-json": "6.1.0",
