--- a/knip.jsonc
+++ b/knip.jsonc
@@ -12,7 +12,11 @@
   "biome": false,
   "workspaces": {
     ".": {
-      "entry": ["hooks/*.js", "scripts/**/*.{js,mjs}"],
+      "entry": [
+        ".github/skills/**/scripts/*.mjs",
+        "hooks/*.js",
+        "scripts/**/*.{js,mjs}"
+      ],
       "ignoreBinaries": ["ts-node", "dev"],
       "ignoreDependencies": ["@playwright/mcp"]
     },
