--- a/packages/atomic/package.json
+++ b/packages/atomic/package.json
@@ -82,7 +82,8 @@
     "promote:npm:latest": "pnpm --filter @coveo/ci promote-npm-prod",
     "validate:definitions": "tsc --noEmit --esModuleInterop --skipLibCheck ./dist/types/components.d.ts",
     "chromatic": "chromatic -d=dist-storybook",
-    "validate:light-dom-styles": "node ./scripts/check-light-dom-host-selectors.mjs"
+    "validate:light-dom-styles": "node ./scripts/check-light-dom-host-selectors.mjs",
+    "validate:no-new-light-dom": "node ./scripts/check-no-new-light-dom-components.mjs"
   },
   "dependencies": {
     "@coveo/bueno": "workspace:*",
