revert insight test deletion

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -637,6 +637,20 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - uses: ./.github/actions/setup
       - uses: ./.github/actions/playwright-headless-ssr-commerce-nextjs
+  cypress-atomic-insight-panel-test:
+    name: "Run e2e tests on Atomic insight panel"
+    needs: affected
+    if: contains(needs.affected.outputs.projects, '@coveo/atomic')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@ec9f2d5744a09debf3a187a3f4f675c53b671911 # v2.13.0
+        with:
+          egress-policy: audit
+
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      - uses: ./.github/actions/setup
+      - uses: ./.github/actions/cypress-atomic-insight-panel
   cypress-headless-ssr-search-nextjs-app-router-test:
     name: "Run e2e tests on Headless SSR Search NextJS App Router"
     needs: affected
@@ -768,6 +782,7 @@ jobs:
       - "cypress-atomic-search-nextjs-pages-router-test"
       - "playwright-atomic-search-commerce-angular-test"
       - "cypress-atomic-search-stencil-test"
+      - "cypress-atomic-insight-panel-test"
       - "cypress-headless-ssr-search-nextjs-app-router-test"
       - "cypress-headless-ssr-search-nextjs-pages-router-test"
       # - "prerelease-npm-pr"
@@ -808,6 +823,7 @@ jobs:
       - "cypress-atomic-search-nextjs-pages-router-test"
       - "playwright-atomic-search-commerce-angular-test"
       - "cypress-atomic-search-stencil-test"
+      - "cypress-atomic-insight-panel-test"
       - "cypress-headless-ssr-search-nextjs-app-router-test"
       - "cypress-headless-ssr-search-nextjs-pages-router-test"
     runs-on: ubuntu-latest
